add_subdirectory(./decode_packets)
add_subdirectory(./DOIF)
add_subdirectory(./DOIFex)
add_subdirectory(./EQCNT)
add_subdirectory(./EQCNTex)
add_subdirectory(./hello)
add_subdirectory(./HW)
add_subdirectory(./HWM)
add_subdirectory(./matrIR)
add_subdirectory(./matrIR_dyn)
add_subdirectory(./OneLoop)
add_subdirectory(./TwoLoops)
