# set(THIS_TARGET_NAME XYZ)

# add_executable(${THIS_TARGET_NAME}
    # main.cpp
    # )

# target_link_libraries(${THIS_TARGET_NAME}
    # static_lib_one
    # loadlibs_dynamic_lib_one
    # loadlibs_dynamic_lib_two
    # loadlibs_dynamic_lib_three
    # )

# set_target_properties(${THIS_TARGET_NAME} PROPERTIES
    # OUTPUT_NAME "${THIS_TARGET_NAME}_${CMAKE_SYSTEM_NAME}_${CMAKE_BUILD_TYPE}"
    # )

# install(TARGETS ${THIS_TARGET_NAME} DESTINATION "benchmarks/loading")
